fixed h2 alignment

--- a/info.css
+++ b/info.css
@@ -48,6 +48,6 @@
     font-family: 'Playfair Display';
   }
 
-  title {
+  h2 {
     text-align: left;
   }
